
        News and upgrading information for Gedafe
        =========================================
HEAD	(2003-12-2)
------------------------------------------------------------------------------
  * Support for user plugin widgets as per Widgets.pm
    Works just like the pearls. (freek)

  * Add id columms to meta_fields and meta_tables in example database
    demo.sql. This is not needed, but it allows you to maintain these
    tables more easy with tools like phpPgAmin or pgadmin3 (johannes)
------------------------------------------------------------------------------

(arrows indicate actions that you should make when upgrading)

1.2.1 (2003-09-03)
------------------------------------------------------------------------------
  * New widget: combo (just the combo-box without text entry)

  * Bugfixes: date widget didn't work.

1.2.0 (2003-09-27)
------------------------------------------------------------------------------
  * PearlReports have been integrated with gedafe. It is now possible
    to write perl modules (pearls) which will be picked up by gedafe
    and presented in the "Entry" screen. The idea is to use this
    facility for generating complex, structured (multi-level) reports.
    Pearls have access to gedafes Webform generator as well a to the
    database handle.

  * Combo-boxes must always reference the 'id' of the table and not the
    'hid' if the table has one. The old behaviour was confusing and was
    thus changed, but you can still tell Gedafe to behave like that
    by setting 'gedafe_compat' to '1.0' in the Start function.

    -> Change all combo-boxes where the 'hid' is referenced in the
       'id' field of the view to reference the 'id' of the table

    OR

    -> Put the following in the Start function of the cgi script:

         gedafe_compat => '1.0'

  * The 'filterfirst' attribute must now be set on the _list view if one
    is used.

    -> Change the meta_table_table field of all filterfirst attributes to